--- a/src/Page/Welcome/Welcome.css
+++ b/src/Page/Welcome/Welcome.css
@@ -31,7 +31,7 @@ body {
 	text-align: center;
 }
 
-.aboutus-text {
+.welcome-detail-text {
 	font-family: "Jakarta-Regular";
 	color: white;
 	font-size: 24px;
