--- a/src/Page/KabinetHMTT/KabinetHMTT.css
+++ b/src/Page/KabinetHMTT/KabinetHMTT.css
@@ -92,3 +92,29 @@
 	color: black;
 	text-align: justify;
 }
+
+.visimisi-base {
+	width: 100%;
+	height: 1666px;
+	background-color: white;
+}
+
+.visimisi-headling {
+	font-family: "Jakarta-Bold";
+	background: linear-gradient(90deg, #000 -2.88%, #0781c4 101.15%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-size: 96px;
+	text-align: center;
+	margin-top: 0px;
+}
+
+.visimisi-box1 {
+	width: 1308px;
+	height: 570px;
+	flex-shrink: 0;
+	border-radius: 41px 41px 0px 0px;
+	background-color: black;
+	text-align: center;
+}
