--- a/src/Page/KabinetHMTT/KabinetHMTT.css
+++ b/src/Page/KabinetHMTT/KabinetHMTT.css
@@ -31,7 +31,6 @@
 
 .aboutus-base {
 	height: 1130px;
-	width: 100%;
 	background-color: white;
 	padding-left: 32px;
 	padding-right: 32px;
@@ -94,9 +93,11 @@
 }
 
 .visimisi-base {
-	width: 100%;
-	height: 1666px;
 	background-color: white;
+	display: flex;
+	flex-direction: column; /* Stack content in a column */
+	justify-content: center;
+	align-items: center;
 }
 
 .visimisi-headling {
@@ -112,9 +113,79 @@
 
 .visimisi-box1 {
 	width: 1308px;
-	height: 570px;
-	flex-shrink: 0;
 	border-radius: 41px 41px 0px 0px;
 	background-color: black;
-	text-align: center;
+	text-align: left;
+	padding-top: 36px;
+	padding-left: 54px;
+	padding-bottom: 54px;
+}
+
+.visimisi-subheading {
+	color: #fff;
+	font-family: "Jakarta-Bold";
+	font-size: 16px;
+	font-style: normal;
+	line-height: normal;
+	margin-bottom: 0px;
+}
+
+.visi-headline {
+	background: linear-gradient(90deg, #fff 0%, #0781c4 20%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-family: "Jakarta-Bold";
+	font-size: 128px;
+	line-height: normal;
+	margin: 0;
+}
+
+.visi-body {
+	width: 1155px;
+	color: #fff;
+	text-align: justify;
+	font-family: "Jakarta-Regular";
+	font-size: 18px;
+	font-style: normal;
+	line-height: 36px; /* 150% */
+}
+
+.visimisi-box2 {
+	width: 1308px;
+	border-radius: 0px 0px 41px 41px;
+	background-color: #ececec;
+	text-align: left;
+	padding-top: 36px;
+	padding-left: 54px;
+	padding-bottom: 54px;
+}
+.visi-headline-black {
+	background: linear-gradient(90deg, black 0%, #0781c4 20%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-family: "Jakarta-Bold";
+	font-size: 128px;
+	line-height: normal;
+	margin: 0;
+}
+
+.visimisi-subheading-black {
+	color: black;
+	font-family: "Jakarta-Bold";
+	font-size: 16px;
+	font-style: normal;
+	line-height: normal;
+	margin-bottom: 0px;
+}
+
+.misi-list {
+	background-color: white;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: row;
+	width: fit-content;
+	padding-left: 8px;
+	padding-right: 8px;
 }
