improve hover dan add visi dan misi

--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -27,6 +27,10 @@
 	background: transparent;
 }
 
+a {
+	text-decoration: underline;
+}
+
 .nav-list {
 	margin-right: 32px;
 	font-family: "Jakarta-Regular";
