--- a/src/Segment/OurLab/OurLab.css
+++ b/src/Segment/OurLab/OurLab.css
@@ -41,7 +41,8 @@ body {
 	color: white;
 	font-size: 18px;
 	text-align: center;
-	margin-top: 18px;
+	margin-top: 36px;
+	line-height: 1.5;
 }
 .center {
 	margin-left: 72px;
