--- a/src/Component/LabBox/LabBox.css
+++ b/src/Component/LabBox/LabBox.css
@@ -37,7 +37,7 @@
 	font-family: "Jakarta-Regular";
 	font-size: 14px;
 	width: 300px;
-	line-height: 1.5;
+	line-height: 24px;
 }
 
 .text-italic-more {
