--- a/src/Page/Article/Article.css
+++ b/src/Page/Article/Article.css
@@ -92,6 +92,17 @@
 	padding-left: 64px;
 }
 
+@keyframes glowing {
+	0% {
+		text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #009bd8,
+			0 0 40px #009bd8, 0 0 50px #009bd8, 0 0 60px #009bd8, 0 0 70px #009bd8;
+	}
+	100% {
+		text-shadow: 0 0 20px #fff, 0 0 30px #009bd8, 0 0 40px #009bd8,
+			0 0 50px #009bd8, 0 0 60px #009bd8, 0 0 70px #009bd8, 0 0 80px #009bd8;
+	}
+}
+
 .article-header {
 	background: linear-gradient(270deg, white, #009bd8);
 	-webkit-background-clip: text;
@@ -99,4 +110,6 @@
 	font-size: 64px;
 	font-family: "Jakarta-Bold";
 	margin-left: 154px;
+	/* text-shadow: 0 0 10px #fff, 0 0 20px #009bd8, 0 0 30px #009bd8,
+		0 0 40px #009bd8, 0 0 30px #009bd8, 0 0 20px #009bd8, 0 0 10px #009bd8; */
 }
