--- a/src/Component/ArticleTile/ArticleTile.css
+++ b/src/Component/ArticleTile/ArticleTile.css
@@ -105,3 +105,13 @@
 a:hover {
 	text-decoration: none;
 } */
+
+.no-underline{
+	text-decoration: none;
+}
+.no-underline:hover{
+	text-decoration: none;
+}
+
+
+
