--- a/src/Page/Article/Article.css
+++ b/src/Page/Article/Article.css
@@ -18,6 +18,7 @@
   color: black;
   margin-bottom: 16px;
   width: 100%;
+  text-decoration: none;
 }
 
 .highlight-parent {
@@ -28,6 +29,7 @@
   border-radius: 30px;
   display: flex;
   flex-direction: row;
+  text-decoration: none;
 
   /* position: relative; */
 }
