--- a/src/Page/KabinetHMTT/KabinetHMTT.css
+++ b/src/Page/KabinetHMTT/KabinetHMTT.css
@@ -15,8 +15,10 @@
 
 .headingKabinet-base {
   width: 100%;
-  height: 100vh;
-  padding-top: 128px;
+  height: calc(100vh - 9.688rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .heading-kabinet-text {
