--- a/src/Page/LabDetail/labdetail.css
+++ b/src/Page/LabDetail/labdetail.css
@@ -92,6 +92,7 @@
   flex-direction: column;
   justify-content: center;
   width: 840px;
+  gap: 3rem;
   /* padding: 32px; */
 }
 
@@ -108,19 +109,32 @@
   align-items: center;
   justify-content: center;
   gap: 5rem;
-  height: 100vh;
+  margin-bottom: 128px;
+  /* height: 100vh; */
+}
+
+.wrapper-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-left: 64px;
+  margin-bottom: 128px;
+  /* align-items: center; */
+  /* height: 100vh; */
 }
 
 .aboutus {
   font-family: "Jakarta-Medium";
   font-size: 24px;
   color: white;
+  margin: 0;
 }
 
 .aboutus-grey {
   font-family: "Jakarta-Medium";
   font-size: 18px;
   color: #969696;
+  margin: 0;
 }
 
 .parent-photocard {
@@ -197,4 +211,31 @@
   flex-direction: column;
   gap: 8rem;
   justify-content: center; /* Center vertically */
+}
+
+.gallery-placeholder-sm {
+  width: 640px;
+  height: 700px;
+  object-fit: cover;
+}
+
+.gallery-placeholder-lg {
+  width: 1260;
+  height: 720px;
+  object-fit: cover;
+}
+.container-duo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
+  gap: 2rem;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  gap: 2rem;
 }
